[package]
name = "yxorq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.0.0-rc.2", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1.0-rc.2"
serde = { version = "1.0.152" }
clap = { version = "4.1.1", features = ["derive"] }
base64 = "0.21.0"